fixed some css elements throughout the application and fixed the issue with answers not showing during quiz

--- a/frontend/src/Components/Answer/Answer.css
+++ b/frontend/src/Components/Answer/Answer.css
@@ -8,9 +8,10 @@
     align-items: center;
     color: black;
     text-align: center;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bold;
     margin: 15px 0;
+    padding: 2px;
 }
 
 
@@ -26,7 +27,7 @@
     .answer-box {
         height: 90px;
         width: 370px;
-        font-size: 20px;
+        font-size: 18px;
         margin: 10px 0;
     }
 }
