--- a/frontend/src/Pages/AdminView/AdminView.css
+++ b/frontend/src/Pages/AdminView/AdminView.css
@@ -12,6 +12,7 @@
     background-color: white;
     align-items: center;
     padding-bottom: 15px;
+    margin-bottom: 50px;
 }
 
 /* Title */
