--- a/frontend/src/Pages/Home/Home.css
+++ b/frontend/src/Pages/Home/Home.css
@@ -34,7 +34,7 @@
 .login-left-section-image-container {
     width: 240px;
     height: 220px;
-    margin: 0px 0px 35px 0px;
+    margin: 0px 0px 15px 0px;
 }
 .login-right-section-image-container {
     width: 290px;
